[package]
name = "nvmirror-disasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Disassembler for JIT output (debugging)"

[dependencies]
ebpf-core = { workspace = true }
jit-ir = { workspace = true }
jit-aarch64 = { workspace = true }
jit-riscv = { workspace = true }
